Bug #1914
closedlibses cannot set more than one properties at once
100%
Description
If more than one properties are specified only the last one is set, other ones are discarded.
Updated by Alexander Stetsenko over 10 years ago
A little excerpt from SES2 specification:
A SELECT bit set to one specifies that the enclosure services process should perform the control functions defined by the other bits in the control element. A SELECT bit set to zero specifies that the enclosure services process shall ignore all other bits in the control element. The SELECT bit allows individual control elements to be selected for control operations.
libses ses2 plugin should take account a SELECT bit when it tries to fill control element by default values.
If SELECT bit is set already this element contains modified data, so no need to load default values.
Updated by Rich Lowe over 10 years ago
- Status changed from New to Resolved
- % Done changed from 0 to 100
- Tags deleted (
needs-triage)
Resolved in r13586 commit:57706b7506c8