1914 libses cannot set more than one properties at once 1984 libses uses threshold diag page wrong way Reviewed by: Dan McDonald <danmcd@nexenta.com> Reviewed by: Eric Schrock <eric.schrock@delphix.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Richard Lowe <richlowe@richlowe.net>